docs/book/samples/appc/indent_check.out
error[formatting]: indentation must be 0 or 2 spaces, found 3
  --> indent_check.kso:2:1
   2 |    x = 1
       ^
error[formatting]: indentation must be 0 or 2 spaces, found 3
  --> indent_check.kso:3:1
   3 |    print "{x}"
       ^
